[package]
name = "tt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
serde_json = "1.0.116"
serde = { version = "1.0.189", features = ["derive"] }
chrono = "0.4.31"
tempfile = "3"
homedir = "0.3.3"
